mavensmate/Fabrication/deploy/kalho13@gmail.com/2014-05-14 14:33:49/unpackaged/objects/R_D_Statement__c.object
<CustomObject>
    <description>Used to define new products</description>
    <fields>
        <fullName>Cleaning_Time__c</fullName>
        <label>Cleaning Time</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elements_Theming_Time__c</fullName>
        <label>Elements Theming Time</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EngDate__c</fullName>
        <label>EngDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eng_Bom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eng Bom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eng_Initials__c</fullName>
        <label>Eng Initials</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eng_Notes__c</fullName>
        <label>Eng Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eng_Parts_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eng Parts List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineering_Number__c</fullName>
        <label>Engineering Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gallons_of_Paint__c</fullName>
        <label>Gallons of Paint</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Date__c</fullName>
        <label>Job Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Initials__c</fullName>
        <label>Job Initials</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <label>Job Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Unit_Paint_Time__c</fullName>
        <label>One Unit Paint Time</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Unit_Production_Time__c</fullName>
        <label>One Unit Production Time</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Material_Weight__c</fullName>
        <label>Other Material Weight</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prints__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prints</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Materials__c</fullName>
        <label>Shipping Materials</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Time__c</fullName>
        <label>Shipping Time</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Steel_Weight__c</fullName>
        <label>Steel Weight</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <label>R&amp;D Product Traveler</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>R &amp; D Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>R&amp;D Product Travelers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>